<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">VocalPitchMonitor</string>
    <string name="action_default">Default</string>
    <string name="action_delete">Delete</string>
    <string name="action_import">Import</string>
    <string name="action_import_config">Import tuning config…</string>
    <string name="action_load">Load</string>
    <string name="action_save">Save</string>
    <string name="action_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="chooser_title">Send wav to..</string>
    <string name="msg_fileexists_error">File already exists</string>
    <string name="msg_filename_error">The file extension must be .wav</string>
    <string name="msg_imported">Imported</string>
    <string name="msg_imported_fail">Failed to import</string>
    <string name="msg_loaded">Loaded</string>
    <string name="msg_loaded_fail">Failed to load</string>
    <string name="msg_saved">Saved</string>
    <string name="msg_saved_fail">Failed to save</string>
    <string name="settings_name">Settings</string>
    <string name="settings_auto_scroll">Auto ranging</string>
    <string name="settings_bflat_inst">B♭ Inst.</string>
    <string name="settings_button_display">Button display</string>
    <string name="settings_c_inst">C Inst.</string>
    <string name="settings_calibration">Calibration</string>
    <string name="settings_color">Color</string>
    <string name="settings_color_dominant">5th Dominant</string>
    <string name="settings_color_leading">7th Leading</string>
    <string name="settings_color_mediant">3rd Mediant</string>
    <string name="settings_color_metronome">Metronome</string>
    <string name="settings_color_pitch">Pitch</string>
    <string name="settings_color_select">Color Select</string>
    
    <string name="settings_color_subdominant">4th Subdominant</string>
    <string name="settings_color_subtonic">6th Subtonic</string>
    <string name="settings_color_supertonic">2nd Supertonic</string>
    <string name="settings_color_tempo">Beats</string>
    <string name="settings_color_tonic">1st Tonic</string>
    <string name="settings_display_bpm">Indicate beats with lines</string>
    <string name="settings_display_hz">Display frequency in Hz</string>
    <string name="settings_display_metronome">Blink screen</string>
    
    <string name="settings_display_tuner">Display tuner</string>
    <string name="settings_eflat_inst">E♭ Inst.</string>
    <string name="settings_enable_auto_scroll">Enable auto ranging</string>
    <string name="settings_f_inst">F Inst.</string>
    
    <string name="settings_meter">Meter</string>
    <string name="settings_meter_none">None</string>
    <string name="settings_metronome">Metronome</string>
    <string name="settings_note_name">Note name</string>
    <string name="settings_note_name_traditional">Do, Re, Mi, Fa, Sol, La, Si</string>
    <string name="settings_octave_a3">A3</string>
    <string name="settings_octave_a4">A4</string>
    <string name="settings_octave_number">Octave number</string>
    <string name="settings_scale">Scale</string>
    <string name="settings_scroll_speed">Scroll speed</string>
    <string name="settings_tempo">Tempo</string>
    <string name="settings_transpose">Transpose</string>
    <string name="settings_tuner">Tuner</string>
    <string name="settings_tuner_smooth">Smoothing</string>
    <string name="threshold">Threshold of volume</string>
    <string name="horizontal_zooming">Horizontal zooming</string>
    <string name="vertical_zooming">Vertical zooming</string>
    <string name="config_load_fail">Tuning config load failed</string>
    <string name="config_parse_fail">Tuning config parse failed:\n%1$s</string>
    <string name="config_missing">No tuning config imported.\nTap the scale name and choose “Import tuning config…”</string>
</resources>
